human_written_tests/WebAssembly/processed_control_flow_validation/test_call_indirect_15.wast
(assert_invalid
  (module
    (type (func (param i32)))
    (table 0 funcref)
    (func $arity-0-vs-1 (call_indirect (type 0) (i32.const 0)))
  )
  "type mismatch"
)